some corrections for part 4
Note that I don't come from an English-speaking country

--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -26,13 +26,13 @@ Note that the version used at the time of writing this book is `r packageVersion
 `{golem}` is a toolkit for simplifying the creation, development and deployment of a Shiny application. 
 It's focused on building applications that will be sent to production, but of course starting with `{golem}` from the very beginning is also possible, even recommended: it is easier to start with `{golem}` than to refactor your codebase to fit into the framework.
 
-The stable release can be found on CRAN and is installed with:
+The stable release can be found on CRAN and installed with:
 
 ```{r 04-golem-2, eval=FALSE}
 install.packages("golem")
 ```
 
-`{golem}` development version can be found on GitHub and is installed with:
+`{golem}` development version can be found on GitHub and installed with:
 
 ```{r 04-golem-3, eval=FALSE}
 remotes::install_github("Thinkr-open/golem")
@@ -98,7 +98,7 @@ fs::dir_tree("golex")
 ```
 
 If you are familiar with building R packages, this structure will look familiar to you. 
-And for a good read on: a `{golem}` app IS a package.
+And for a good reason: a `{golem}` app IS a package.
 
 ### `DESCRIPTION` & `NAMESPACE`
 
@@ -140,7 +140,7 @@ If you want to add a standard file (that is to say out of `{golem}` nomenclature
 If you have built a "classic" Shiny App, _i.e_ before `{golem}` was available, or if you started with the standard RStudio template, you might have a series of `source()` and `library()` calls all over the place. 
 This is not to be done with a `{golem}`-based application: you are leveraging the package infrastructure so that everything inside the `R/` folder is made available internally, without having to `source()` scripts.
 
-Note also that this folder can not contain sub-folders. 
+Note also that this folder must not contain any sub-folders. 
 
 #### app_server.R
 
@@ -205,7 +205,7 @@ The `run_app()` function is the one that you will use to launch the app
 ^[Very technically speaking, it is the `print()` from the object outputed by `run_app()` that launches the app, but this is another story.]
 .
 
-The body of this function is wrapped inside `with_golem_options()`, which allows you to pass arguments to the `run_app()` function, which will later be callable with `golem::get_golem_options()`. 
+The body of this function is wrapped inside `with_golem_options()`, which allows you to pass arguments to the `run_app()` function, which can be called later on with `golem::get_golem_options()`. 
 Some examples of passing arguments include `run_app(prod = FALSE)` to run a verbose development version or `run_app(user = "admin)` to bypass authentication during development tests.
 
 
@@ -297,7 +297,7 @@ get_golem_config(
 )
 ```
 
-You can also use en environment variable (default `{config}` behavior): 
+You can also use an environment variable (default `{config}` behavior): 
 
 ```{r 04-golem-20, eval=FALSE}
 Sys.setenv("R_CONFIG_ACTIVE" = "production")
@@ -308,7 +308,7 @@ The good news is that if you don’t want/need to use `{config}`, you can safely
 
 #### `golem_config` vs `golem_options`
 
-There is two ways to configure golem apps: 
+There are two ways to configure golem apps: 
 
 + The `golem_opts` in the `run_app()` function 
 + The `golem-config.yml` file
@@ -326,10 +326,10 @@ The `inst/app/www/` folder contains all files that are made available __at appli
 Any web application has external files that allow it to run
 ^[Some webpages do not need any external sources, as they do not have any design and are plain HTML, but generally speaking we will not call this format a web application.]
 . 
-For example, `{shiny}` and its `fluidPage()` function bundles a series of CSS and JavaScript files, notably the `Boostrap` library, or `jQuery`. 
+For example, `{shiny}` and its `fluidPage()` function bundles a series of CSS and JavaScript files, notably the `Bootstrap` library, or `jQuery`. 
 These external files enhance your app: CSS for the design part and JavaScript for the interactive part (more or less). 
 On top of that, you can add your own files: your own design with CSS or your own JavaScript content (as we will see in the last chapters of this book). 
-In order to work, you have to include, somewhere in the UI, a link to these files. 
+In order to work, you have to include a link to these files somewhere in the UI. 
 This is what `golem_add_external_resources()` is made for: linking the external resources that you will build with the following functions.
 
 + `golem::add_css_file()`
