Suggests for Chapter 13

--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -40,7 +40,7 @@ In other words, you can see what changes are made to a specific file in your cod
 + __It centralizes the codebase__. 
 You can use `git` locally, but its strength also relies on the ability to synchronize  your local project with a distant server.
 This also means that _several_ people can synchronize with this server and collaborate on a project. 
-That way, changes on a branch on a server can be downloaded (it is called `pull` in `git` terminology) by all the members of the team, and synchronized locally, _i.e_ if someone makes changes to a branch and send them to the main server, all the other developers can retrieve these change on their machine.
+That way, changes on a branch on a server can be downloaded (it is called `pull` in `git` terminology) by all the members of the team, and synchronized locally, _i.e_ if someone makes changes to a branch and sends them to the main server, all the other developers can retrieve these change on their machine.
 
 ### `Git` basics: `add` - `commit` - `push` - `pull`
 
@@ -48,7 +48,7 @@ These are the four main actions you will be performing in `git`: if you just nee
 
 #### `add`
 
-When using `add`, you are choosing which elements of your project you want to track, be it new files or modifications of an already versionned file. 
+When using `add`, you are choosing which elements of your project you want to track, be it new files or modifications of an already versioned file. 
 This action does not save the file in the git repository, but flags the changes to be added to the next commit.
 
 #### `commit`
@@ -66,8 +66,8 @@ A good practice is to state in the commit message which choices you made and why
 
 #### `push`
 
-Once you have get a set of commits ready, you are ready to `push` it to the server. 
-In other word, you will permanently record these commits (so the series of changes) to the server. 
+Once you have a set of commits ready, you are ready to `push` it to the server. 
+In other words, you will permanently record these commits (hence the series of changes) to the server. 
 
 Making a push implies three things: 
 
@@ -141,7 +141,7 @@ For an app in production, the last commit of this branch should be the version t
 
 + The `dev` branch, on the other hand, is the "Work in progress" branch: the one that contains the latest changes before they are merged into master. 
 This is the common working branch for every developers. 
-Most of the time, developers do not push code into these branch either: they make merge/pull request (MR) to `dev` from one of their `feature branch`. 
+Most of the time, developers do not push code into these branch either: they make merge/pull request (MR/PR) to `dev` from one of their `feature branch`. 
 
 + A `feature branch` is one branch, forked from `dev`, that implements one of the feature of the application. 
 To keep a clean track of what each branch is doing, a good practice is to use `issue-XXX`, where `XXX` is the corresponding issue you plan to solve in this branch. 
