Suggests for Chapter 14

--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -7,7 +7,7 @@
 `r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`
 
 Once your app is built, you are ready to deploy it! 
-In other words, your software is now ready to be used by other users, be it from 
+In other words, your software is now ready to be used by other users.
 There are two main ways to share your application and make it available to others: by creating a package and making it installable, or by sending it to a remote server. 
 We will see in this part how you can do that using `{golem}` [@R-golem]. 
 
@@ -23,7 +23,7 @@ Here is a quick checklist of things to think about once your application is read
 
 + [ ] Test coverage is good
 
-+ [ ] The contact and debugging processes are clear and everybody involves in the project management knows what to expect
++ [ ] The contact and debugging processes are clear and everybody involved in the project management knows what to expect
 
 + [ ] (If relevant) The server it is deployed on has all the necessary software installed (Docker, Connect, Shiny Server...) to make the application run
 
@@ -33,11 +33,11 @@ Here is a quick checklist of things to think about once your application is read
 
 + [ ] (If relevant) The environment variables from the production server are managed inside the application
 
-+ [ ] (If relevant) The app is launched on the correct port, or at least this port can be configured via environment variable
++ [ ] (If relevant) The app is launched on the correct port, or at least this port can be configured via an environment variable
 
 + [ ] (If relevant) The server where the app is deployed have access to the data sources (database, API...)
 
-+ [ ] If the app record data, there are backups for these data.
++ [ ] If the app records data, there are backups for these data.
 
 ## Sharing your app as a package
 
@@ -143,12 +143,12 @@ You will find the function for creating a `Dockerfile` for your `{golem}` app in
 + `golem::add_dockerfile_heroku()`
 
 The first function creates a "generic" `Dockerfile`, in the sense that it is not specific to any platform, and would work out of the box for your local machine. 
-The second one is meant for [ShinyProxy](https://www.shinyproxy.io/), an open source solution for deploying containarized Shiny application, and the third for [Heroku](https://www.heroku.com/), an online service that can serve containerized applications (not specific to Shiny). 
+The second one is meant for [ShinyProxy](https://www.shinyproxy.io/), an open source solution for deploying containerized Shiny applications, and the third for [Heroku](https://www.heroku.com/), an online service that can serve containerized applications (not specific to Shiny). 
 
 Other platforms can run Docker containers, notably AWS and Google Cloud Engine. 
 At the time of writing these lines, `{golem}` does not provide support for these environment, but that is on the ToDo list!
 
 Note that the `Dockerfile` creation in `{golem}` tries to replicate your local environment as precisely as possible, notably by matching your R version, and the version of the packages you have installed on your machine. 
-System requirements are also added when they are found on [sysreqs.r-hub.io](https://sysreqs.r-hub.io/)). 
+System requirements are also added when they are found on [sysreqs.r-hub.io](https://sysreqs.r-hub.io/). 
 Otherwise you might have to add them manually. 
 
