Some more suggests

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -389,7 +389,7 @@ dockerstats("hexmake")
 ```
 
 Of course, right now nobody is using the app, so the usage can be pretty small. 
-But let's push it a little bit an mimic a lot of connections. 
+But let's push it a little bit, mimicking a lot of connections. 
 
 To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
@@ -632,7 +632,7 @@ The `renv/` folder contains a series of files that store your settings and the n
 fs::dir_tree("data-raw/renvinit/", recurse = 5)
 ```
 
-We will not go into details on this folder, as it is a rather complex structure and chances are that you will never have to update it by hand
+We will not go into details on this folder, as it is a rather complex structure and chances are that you will never have to update it by hand.
 
 With `{renv}`, you can choose to link this "local repository" to a local cache, _i.e_ a folder which is common to all your projects and stores packages and the different versions you already installed (this is the default behavior) or to store the complete packages inside the project, making it portable.
 
