--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -130,7 +130,7 @@ And of course, remember that `git` is not reserved to Shiny Applications: it can
 ### About `git-flow`
 
 There are a lot of different ways and methodologies to organize your Git workflow. 
-One of the most popular one is called `git flow`, and we will give you here a quick introduction to how you can manage your work using this approach. 
+One of the most popular ones is called `git flow`, and we will give you here a quick introduction on how you can manage your work using this approach. 
 Please note that this is a quick introduction, not a complete guide: we will link to some further reading just at the end of this section. 
 
 So, here are the key concept of `git flow`: 
