Suggests for Chapter 15

--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -108,7 +108,7 @@ benched
 
 Though, how much time gain is worth being sure you will get someone in your team to take over the maintenance if needed? 
 In other words, given that (in our example), we are gaining around `r benched$median[1] - benched$median[2]` on the execution time of our function, is it worth switching to C++? 
-Using external languages or complex data structures implies that from the start, you will need to think about who and how your code base will be maintain over the years. 
+Using external languages or complex data structures implies that from the start, you will need to think about who and how your code base will be maintained over the years. 
 Chances are that if you plan on using a Shiny application during a span of several years, various R developers will be working on the project, and including C++ code inside your application means that these future developer will either be required to know C++, or they will not be able to maintain this piece of code. 
 
 So, to sum up, there are three ways to optimize your application & R code, and the bad news is that you can not optimize for all of them: 
@@ -289,7 +289,7 @@ And, bonus point, `{bench}` takes time to check that the two outputs are the sam
 
 #### Shiny back-end
 
-You can profile Shiny application using the `{profvis}` package, just as any other piece of R code. 
+You can profile Shiny applications using the `{profvis}` package, just as any other piece of R code. 
 The only thing to note if you want to use this function on an app built with `{golem}` [@R-golem], you will have to wrap the `run_app()` function in a `print()` function. 
 Long story short, what make the app run is not the function itself, but the printing of the function, so the object returned by `run_app()` itself can not be profiled. 
 See the discussion on this [issue on `{golem}`](https://github.com/ThinkR-open/golem/issues/146) to learn more about this.
@@ -307,7 +307,7 @@ To do that, we can use standard web development tools: as said several times, a 
 There are thousands of tools available to do exactly that, and going through all of them would probably not make a lot of sense.
 
 So, let's focus on getting started with a basic but powerful tool, that comes for free inside your browser: [Google Lighthouse](https://developers.google.com/web/tools/lighthouse), one of the famous tool for profiling web pages, and which is bundled into recent versions of Google Chrome. 
-The nice thing is that this tool not only cover what you see (i.e. not only what you are actually rendering on your personal computer), but can also audits your app with various configuration, notably on mobile, with low bandwidth and/or mimicking 3G connection. 
+The nice thing is that this tool not only covers what you see (i.e. not only what you are actually rendering on your personal computer), but can also audit your app with various configurations, notably on mobile, with low bandwidth and/or mimicking 3G connection. 
 being able to perform audit of our application as seen on a mobile device is a real strength: we are developing application on our computer, and might not be regularly checking how our application is performing on a mobile. 
 Yet a large portion of the web navigation is performed on a mobile or table. 
 Already in 2016, Google [wrote](https://www.thinkwithgoogle.com/data/web-traffic-from-smartphones-and-tablets/) that "_More than half of all web traffic now comes from smartphones and tablets_". 
@@ -363,7 +363,7 @@ For example, the report from `{hexmake}` [@R-hexmake] suggests to "Eliminate ren
 
 + SEO: search engine optimization, or how will your app perform when it comes to search engine indexation. 
 
-+ Progressive Web App (PWA): a PWA is an app that can run on any device, _" reaching anyone, anywhere, on any device with a single codebase"_. 
++ Progressive Web App (PWA): a PWA is an app that can run on any device, _"reaching anyone, anywhere, on any device with a single codebase"_. 
 Google audit your application to see if your application fits with this idea.
 
 Profiling web page is a wide topic and a lot of things can be done to enhance the global page performance.
@@ -482,7 +482,7 @@ var sum=0;for(var i=0;i<=10;i++){sum+=i};alert(sum);
 ```
 
 Both these code blocks behave the same way, but the second one will be lighter when saved to a file: this is the very core principle of minification of files.
-It is something pretty common to do when building web applications: on the web, every byte count, so the lighter your external resources the better.
+It is something pretty common to do when building web applications: on the web, every byte counts, so the lighter your external resources the better.
 Minifiction is something important as the heavier your resources, the longer your application will take to launch, and: 
 
 + Page launch time is crucial when it comes to ranking the pages on the web
