Some more suggests

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -389,7 +389,7 @@ dockerstats("hexmake")
 ```
 
 Of course, right now nobody is using the app, so the usage can be pretty small. 
-But let's push it a little bit, mimicking a lot of connections. 
+But let's push it a little bit by mimicking a lot of connections. 
 
 To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
