Some more suggests

--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -264,9 +264,9 @@ To launch code blocks in parallel, we will use a combination of two packages, `{
 
 The first type of asynchronous programming in Shiny is the one that allows non-blocking programming at a cross-session context. 
 In other words, it is a programming method which is useful in the context of running one Shiny session which is accessed by multiple users. 
-Natively, in Shiny, if `user1` comes and launches a 15 second computation, then `user2` has to wait for this computation to finish, before launching their own 15 second computation, and user 3 has to wait the 15 seconds of `user1` plus the 15 seconds for user, etc. 
+Natively, in Shiny, if _user1_ comes and launches a 15 second computation, then _user2_ has to wait for this computation to finish, before launching their own 15 second computation, and _user3_ has to wait the 15 seconds of _user1_ plus the 15 seconds for user, etc. 
 
-With `{future}` and `{promises}`, each long computation is sent to be run somewhere else, so when `user1` launches their 15 second computation, they are not blocking the R process for `user2` and `user3`. 
+With `{future}` and `{promises}`, each long computation is sent to be run somewhere else, so when _user1_ launches their 15 second computation, they are not blocking the R process for _user2_ and _user3_. 
 
 How does it work
 ^[We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html)]
