--- a/index.Rmd
+++ b/index.Rmd
@@ -66,7 +66,7 @@ In other words, you already have some knowledge about how `{shiny}` works, are a
 ## Book structure {-}
 
 + Part 1 (Building Successful Shiny Apps) gives a general context about what we mean by "production-grade" and "successful" Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production. 
-In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package
+In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package.
 We will finally briefly introduce to our development workflow: a workflow that will be explored in part 2 to 6.
 
 + Part 2 to 6 explore the workflow for building successful applications.  
