--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -66,7 +66,7 @@ Let's dive a little bit more in these two type of complexity.
 
 #### Developers complexity
 
-An app is to be considered complex when it is so large in terms of size and functionality that it makes it impossible to reason about it at once, and developer must rely on tools and methods to understand and handle this complexity: for example, when it comes to `{shiny}`, you will rely on tools like the `{golem}` [@R-golem] framework, introduced all along this book, to handle some implementation, development and deployment complexity.
+An app is to be considered complex when it is so large in terms of size and functionality that it makes it impossible to reason about it at once, and developers must rely on tools and methods to understand and handle this complexity: for example, when it comes to `{shiny}`, you will rely on tools like the `{golem}` [@R-golem] framework, introduced all along this book, to handle some implementation, development and deployment complexity.
 This book will introduce a clear methodology that comes with a series of conventions, which are crucial when it comes to building and maintaining complex systems: by imposing a formalized structure for a software, it enhances its readability, lower the learning curve for new-comers, and reduces the risk of errors inherent to repetitive tasks.
 
 This type of complexity is called _implementation complexity_. 
