add missing link
I'm not sure if this link is acceptable or if the text is consistent with other links, so I'm submitting a separate PR for it.

--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -20,7 +20,7 @@ As you are building a complex, production-grade Shiny application, do not under-
 
 > "Simplify, then add lightness"
 
-__Colin Chapman CBE, Founder of Lotus Cars__
+`r right_link('Colin Chapman CBE, Founder of Lotus Cars', 'https://www.lotuscars.com/lotus-philosophy/')`
 
 Aiming for simplicity is a hard thing, but some rules will help you build a better UX, paving the way for a successful application.
 
