fix typo chapter 7

--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -124,7 +124,7 @@ Then, you can extend this to software engineering, where a greenfield project is
 
 `r right_link("The DevOps Handbook", "https://itrevolution.com/book/the-devops-handbook/")`
 
-Depending on how you chose to handle it, starting from an code base that is already written can either be very much helping, or you can be shooting yourself in the foot. 
+Depending on how you chose to handle it, starting from a code base that is already written can either be very much helping, or you can be shooting yourself in the foot. 
 Most of the time, Shiny projects are not built as reproducible infrastructures: you will find a series of `library()` calls, no functions structure _per se_, no documentation, and no tests. 
 In that case, we would advise to do it "the hard way", or at least what seems to be the hard way: throw the app out away and start from scratch...
 
