fix typo chapter 11

--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -276,6 +276,7 @@ You can make any function being "dev-dependent" with the `make_dev()` function:
 
 ```{r 11-step-by-step-build-16, eval = TRUE}
 log_dev <- golem::make_dev(log)
+options( "golem.app.prod" = FALSE)
 log_dev(10)
 options( "golem.app.prod" = TRUE)
 log_dev(10)
