fix typo chapter 12

--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -626,7 +626,7 @@ If you run this command in a project that already has scripts and dependencies, 
 Note that these packages can come from CRAN, Bioconductor, GitHub, GitLab, 
 Bitbucket, and even local repositories. 
 
-The `renv/` folder contains a series of files that that store your settings and the necessary packages, using a structure that mimics a local repository.
+The `renv/` folder contains a series of files that store your settings and the necessary packages, using a structure that mimics a local repository.
 
 ```{r 12-step-by-step-secure-40 }
 fs::dir_tree("data-raw/renvinit/", recurse = 5)
@@ -667,7 +667,7 @@ readLines("data-raw/renv.lock") %>%
 
 And now that you have a reproducible `{renv}` library, what is next? 
 Of course, if you are either working as a team or deploying to a server, you will have to restore the state of your project, which is now living somewhere else, inside your current project / deployment. 
-And to do that, the function to call is `env::restore()`, which will update your local project with the dependencies listed inside your `Lockfile`. 
+And to do that, the function to call is `renv::restore()`, which will update your local project with the dependencies listed inside your `Lockfile`. 
 
 So, to sum up, here are the step to follow: 
 
@@ -785,7 +785,7 @@ This final command is the one that is launched when you run a container.
 With a `{shiny}` app, this command is the one that launches the application.  
 
 ```{r 12-step-by-step-secure-51, echo = FALSE, comment=""}
-readLines("data-raw/Dockerfile")[16] %>% 
+readLines("data-raw/Dockerfile")[17] %>% 
   glue::as_glue()
 ```
 
