fix typo chapter 13

--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -80,7 +80,7 @@ Making a push implies three things:
 
 #### `pull`
 
-Once changes have be recorded in the main server, everybody synchronized with the project can `pull` the commits to their local project. 
+Once changes have been recorded in the main server, everybody synchronized with the project can `pull` the commits to their local project. 
 
 ### About branches
 
@@ -147,7 +147,7 @@ Most of the time, developers do not push code into these branch either: they mak
 To keep a clean track of what each branch is doing, a good practice is to use `issue-XXX`, where `XXX` is the corresponding issue you plan to solve in this branch. 
 
 + A `hot fix` branch is a branch to correct a critical issue in `master`.
-If forks from master, and is merged straight into `master` using a MR. 
+If is forked from master, and is merged straight into `master` using a MR. 
 
 Here is a summary of this process:
 
