--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -7,7 +7,7 @@
 `r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`
 
 Once your app is built, you are ready to deploy it! 
-In other words, your software is now ready to be used by other users, be it from 
+In other words, your software is now ready to be used by other users, be it from. 
 There are two main ways to share your application and make it available to others: by creating a package and making it installable, or by sending it to a remote server. 
 We will see in this part how you can do that using `{golem}` [@R-golem]. 
 
