fix wrong h5 title

--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -413,7 +413,7 @@ lighthouse_report$audits$`speed-index` %>%
   knitr::kable()
 ```
 
-##### "Speed Index"
+##### "Estimated Input Latency"
 
 ```{r 15-when-optimize-18}
 lighthouse_report$audits$`estimated-input-latency`$description 
