--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -298,7 +298,7 @@ observeEvent(input$ok, {
 + `$('#id').css('color', 'green');`, or in vanilla JavaScript `document.getElementById("demo").style.color = "green";` changes the CSS attributes of the selected element(s). 
 Here, we are switching to green on the `#id` element.
 
-+ `$("#id").text("this)`, or in vanilla JavaScript `document.getElementById("id").innerText = "this";` changes the text content to "this". 
++ `$("#id").text("this")`, or in vanilla JavaScript `document.getElementById("id").innerText = "this";` changes the text content to "this". 
 This can be used to replace 
 
 ```{r 18-javascript-5, eval = FALSE}
