--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -23,7 +23,7 @@ Since then, it has been one of the top project of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors. 
 It is now downloaded around 400K times a month, according to [cranlogs](https://cranlogs.r-pkg.org/badges/shiny), and has `r length(devtools::revdep("shiny"))` reverse dependencies (i.e packages that depend on it), according to `revdep("shiny")` from `{devtools}` [@R-devtools].
 
-If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advanced `{shiny}` and software engineering methods, best practices and structural idea for sending Shiny applications to production. 
+If you are very new to Shiny, this book might feel a little bit overwhelming: we will be discussing some advanced `{shiny}` and software engineering methods, best practices and structural ideas for sending Shiny applications to production. 
 This books relies on the assumption that you already know how to build basic Shiny applications, and that you want to push your Shiny skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
 If you are very new to Shiny, we suggest you start with the [Mastering Shiny book](https://mastering-shiny.org/) before reading the present book.
 
@@ -40,13 +40,13 @@ Ready to start engineering production-grade Shiny Apps?
 Building a Shiny application seems quite straightforward when it comes to small prototypes or proof of concepts: after a few hours of practice and documentation reading, most R developers can have a small working application.  
 But things change when your application reaches "the cliff of complexity"
 ^[We borrow this term from Charity Major, as heard in _Test in Production with Charity Majors_, [CoRecursive](https://corecursive.com/019-test-in-production-with-charity-majors/){target="_blank"}]
-, _i.e_ that moment when the application reaches a states when it can be qualified as "complex".
+, _i.e_ that moment when the application reaches a state when it can be qualified as "complex".
 
 But what do we mean by complexity? 
 Getting a clear definition is not an easy task
 ^[Ironic, right?] 
 as it very much depends on who is concerned and who you are talking to.
-But a good definition can be found in _The DevOps Handbook_ [@genekim2016]: _"One of the defining characteristics of a complex system is that it __defies any single person's ability to see the system as a whole and understand how all the pieces fit together__. Complex system typically have a high degree of interconnectedness of tightly coupled components, and system-level behavior cannot be explained merely in terms of the behavior of the system components."_ (we underlined).
+But a good definition can be found in _The DevOps Handbook_ [@genekim2016]: _"One of the defining characteristics of a complex system is that it __defies any single person's ability to see the system as a whole and understand how all the pieces fit together__. Complex systems typically have a high degree of interconnectedness of tightly coupled components, and system-level behavior cannot be explained merely in terms of the behavior of the system components."_ (we underlined).
 
 Or as noted in "Refactoring at Scale" [@lemaire2020], "_It becomes nearly impossible to reason about the effect a change might have when applied uniformly across a sprawling, complex system. Many tools exist to identify code smells or automatically detect improvements within subsections of code, but we are largely unable to automate human reasoning about how to restructure large applications,in codebases that are growing at an increasingly rapid pace._"
 
@@ -86,7 +86,7 @@ There is an inherent tension between these two sources of complexity, as designi
 Lowering one source of complexity usually means increasing the other, and managing an application project means knowing where to draw the line.
 This usually requires restraining yourself from implementing too much features, and still create an application that is easy to use, and that fits the requirements you have received. 
 
-For example, there is something common in Shiny application: what we can call the "too much reactivity pattern". 
+For example, there is something common in Shiny applications: what we can call the "too much reactivity pattern". 
 In some cases, developers try to make everything reactive: _e.g._, three sliders and a dropdown input, all updating a single plot.
 This behavior lowers the interface complexity: users do not have to really think about what they are doing, they move sliders, change the inputs, and boom! the plot updates. 
 But this kind of pattern can make the application perform too much computation, for example because users rarely go to the value they need on their first try: they usually miss what value they actually want to select. 
@@ -112,7 +112,7 @@ It's up to you: deciding where to draw the line between interface & implementati
 
 ### Assessing Code Complexity
 
-On the developer side, you will want to reduce code complexity so that everybody involved in the coding process is able to create a mental model of how the application work.
+On the developer side, you will want to reduce code complexity so that everybody involved in the coding process is able to create a mental model of how the application works.
 On the user side, you will want to reduce interface complexity so that everybody comes out of using your application with a good user-experience.
 
 Reducing complexity first comes with being able to identify its potential sources, be it in your application code base or in the specifications describing how the application should work.
@@ -123,7 +123,7 @@ But before that, let's dive into code complexity.
 
 #### Codebase size
 
-The total number of lines of code, or the number of files, can be good clue of potential complexity, but only if used as order of magnitude (for example a 10,000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly, even more if you try to reduce this number of line by sacrificing code readability.
+The total number of lines of code, or the number of files, can be good clue of potential complexity, but only if used as order of magnitude (for example a 10,000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly, even more if you try to reduce this number of lines by sacrificing code readability.
 
 R is very permissive when it comes to indentation and line breaks, and, unlike JavaScript or CSS, it is generally not minified
 ^[The minification process is the process of removing all blank characters and put everything on one line so that the file in the output is much smaller.]
@@ -145,7 +145,7 @@ iris %>%
 summarize(group_by(iris, Species), m_sp = mean(Sepal.Length))
 ```
 
-Also, there is also no limit in the way you can indent your code. 
+Also, there is no limit in the way you can indent your code. 
 
 ```{r 01-big-shiny-2 }
 iris[
@@ -247,7 +247,7 @@ knitr::include_graphics("img/controlflow.png")
 _(The following paragraph details the algorithm implementation, feel free to skip it if you are not interested in the implementation details)_  
 The complexity number is then computed by taking the number of nodes, subtracting the number of edges, and adding twice the number of connected components of this graph. 
 The algorithm is then $M = E − N + 2P$, where $M$ is the measure, $E$ the number of edges, $N$ the number of nodes and $2P$ is twice the number of connected components.
-We will not go deep into this topic, as there are a lot things going on in this computation and you can find many documentation about this online.
+We will not go deep into this topic, as there are a lot things going on in this computation and you can find much documentation about this online.
 Please refer to the bibliography for further readings about the theory behind this measurement. 
 
 In R, the cyclomatic complexity can be computed using the `{cyclocomp}` [@R-cyclocomp] package.
@@ -331,7 +331,7 @@ In the end of the day splitting into smaller functions is not a magic solution b
 
 #### Other measures for code complexity
 
-Complexity can come from other sources: insufficient code coverage, dependencies that breaks the implementation, relying on old packages, or a lot of other things. 
+Complexity can come from other sources: insufficient code coverage, dependencies that break the implementation, relying on old packages, or a lot of other things. 
 
 We can use the `{packageMetrics2}` [@R-packageMetrics2] package to get some of these metrics: for example, the number of dependencies, the code coverage, the number of releases and the date of the last one, etc., ... and the number of lines of code and the cyclomatic complexity.
 
@@ -399,11 +399,11 @@ Shiny apps can definitely be used to implement production-grade
 software, but production-grade software implies production-grade software engineering. 
 To make your project a success, you need to use tools that reduce the complexity of your app and ensure that your app is resilient to aging. 
 
-In other words, production-grade Shiny apps requires working with a software engineering mindset, which is not always an easy task in the R world: many R developers have learned this language as a tool for doing data analysis, building model, making statistics, not really as a tool for building software.
+In other words, production-grade Shiny apps require working with a software engineering mindset, which is not always an easy task in the R world: many R developers have learned this language as a tool for doing data analysis, building model, making statistics, not really as a tool for building software.
 
 The use of R has evolved since its initial version released in 1995, and using this programming language as a tool to build software for production is still a challenge, even `r lubridate::year(Sys.Date()) - 1995` years after its first release.
 And still today, for a lot of R users, the software is still used as an "experimentation tool", where production quality is one of the least concerns. 
-But the rise of `{shiny}` (among other packages) has drastically changed the potential of R as a language for production software engineering: its ease of use is also one of the reason why the language is now used outside academia, in more "traditional" software engineering teams.
+But the rise of `{shiny}` (among other packages) has drastically changed the potential of R as a language for production software engineering: its ease of use is also one of the reasons why the language is now used outside academia, in more "traditional" software engineering teams.
 
 This changing context requires different mindsets, skills, and tools. 
 
