Fix minor code typo
catchin -> catching

--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -705,7 +705,7 @@ const get_rand_beer = () => {
       })
       // DEFINE WHAT HAPPENS WHEN THERE IS AN ERROR FETCHING THE API
       .catch((error) => {
-        alert("Error catchin result from API")
+        alert("Error catching result from API")
       })
   };
 ```
